# codestat

./: CMakeLists.txt  LICENSE.txt  README.md
codestat/: CMakeLists.txt
codestat/Source/App/: Application.cpp  Application.h  Main.cpp
codestat/Source/App/CLI/: CommandLineParseResult.h  CommandLineParser.cpp  CommandLineParser.h  CommandLineSettings.h
codestat/Source/Core/Counting/: CountGroup.h  CountSummary.h  FileCount.h  LineCounter.cpp  LineCounter.h  SummaryBuilder.cpp  SummaryBuilder.h
codestat/Source/Core/Files/: FileEntry.h  FileScanner.cpp  FileScanner.h  ScanResult.h
codestat/Source/Core/Filters/: FileFilter.cpp  FileFilter.h  GlobPattern.cpp  GlobPattern.h
codestat/Source/Core/Text/: TextContent.h  TextReader.cpp  TextReader.h
codestat/Source/Reporting/Table/: TableFormatter.cpp  TableFormatter.h
codestat/Source/Support/Errors/: ExitCode.h
